--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.2.1",
+    "@tanstack/react-query": "^5.64.0",
     "ethers": "^6.13.5",
     "next": "15.1.4",
     "react": "^19.0.0",
@@ -26,5 +27,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "@types/react": "^18"
   }
 }
